Crashes with some high-res image thumbnail generation #27203

Closed
opened 2011-04-28 09:42:10 +02:00 by Ian Leonard · 6 comments

%%%When using Blender's file explorer to open an image (with image thumbnail generation enabled), blender will instantaneously crash if it enters a folder with an extremely high resolution image. The crash isn't a freeze, nor does it lock up the rest of my computer. It brings up "Blender is not respanding and must close" window.

I thought it might be a RAM issue, but I monitored the RAM as I entered the folder, and it never even had time to fill, for it crashes only milliseconds, if not instantly, when entering the folder.

If I disable the thumbnail generation, Blender will crash only when opening the file (still instantly though, same manner).

I tested it for a file format issue, and it has no problem with opening files of the same format at a smaller resolution.

This was also tested with only the image in a folder, no other files.

Windows is still able to generate a thumbnail for the image, and the image can still be opened and accessed, so its not corrupt.

The image that causes the problem is a 3,732 MegaPixel (86,400 x 43,200) 1.46GB TIF format image.
Blender can still easily open an image 1/8 the resolution and size (467 MP).
I was unable to test any resolutions between those two resolutions because of the time required to generate such images.

Blender 2.57.0, r36147, 64-bit
Windows 7 64-bit%%%

%%%When using Blender's file explorer to open an image (with image thumbnail generation enabled), blender will instantaneously crash if it enters a folder with an extremely high resolution image. The crash isn't a freeze, nor does it lock up the rest of my computer. It brings up "Blender is not respanding and must close" window. I thought it might be a RAM issue, but I monitored the RAM as I entered the folder, and it never even had time to fill, for it crashes only milliseconds, if not instantly, when entering the folder. If I disable the thumbnail generation, Blender will crash only when opening the file (still instantly though, same manner). I tested it for a file format issue, and it has no problem with opening files of the same format at a smaller resolution. This was also tested with only the image in a folder, no other files. Windows is still able to generate a thumbnail for the image, and the image can still be opened and accessed, so its not corrupt. The image that causes the problem is a 3,732 MegaPixel (86,400 x 43,200) 1.46GB TIF format image. Blender can still easily open an image 1/8 the resolution and size (467 MP). I was unable to test any resolutions between those two resolutions because of the time required to generate such images. Blender 2.57.0, r36147, 64-bit Windows 7 64-bit%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%This is a really big image uncompressed - ~32gb. we probably just need to have some way to skip really large images.%%%

%%%This is a really big image uncompressed - ~32gb. we probably just need to have some way to skip really large images.%%%
Member

%%%Yeah, ImBuf has a facility to first read such info (image size etc) before loading the real stuff.%%%

%%%Yeah, ImBuf has a facility to first read such info (image size etc) before loading the real stuff.%%%
Author

%%%Ah that makes sense, but why does it crash instantaneously? It takes about 45 seconds or so to generate a thumnail or load in a picture around 500 MP, but for the really high res one it just doesn't seem to even try, as if it gives up right when it sees it and crashes.

**Although I know this isn't any major issue (since I doubt anyone has ever really tried or needed to use an image so big), but I thought it would be good to bring it to your attention anyway :)%%%

%%%Ah that makes sense, but why does it crash instantaneously? It takes about 45 seconds or so to generate a thumnail or load in a picture around 500 MP, but for the really high res one it just doesn't seem to even try, as if it gives up right when it sees it and crashes. **Although I know this isn't any major issue (since I doubt anyone has ever really tried or needed to use an image so big), but I thought it would be good to bring it to your attention anyway :)%%%

%%%skip files over 100mb, committed r36433.%%%

%%%skip files over 100mb, committed r36433.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#27203
No description provided.