workaround [#27203] Crashes with some high-res image thumbnail generation skip generating thumbs for images over 100mb. also pass string lengths as size_t rather then int for path_util.c functions.